--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Coba html</title>
+        <style> 
+            body{background-color: #efb5b5;}
+            h3{color: black;}
+            p{color:black; font-size: 120%;}
+        </style>
+    </head>
 
+    <body> 
+        <br>
+        <center><img src="pasfoto bulet.png" width="150"></center>
+        <p style="text-align: center;">Aulya Rahmaniar | 102022400178 | Rekayasa Industri | Sistem Informasi</p>
+        <center>
+            <table>
+                    <tr>
+                        <td><a href="https://www.instagram.com/aulyarahmaniar?igsh=MXNmMDQwNzF6eDg2dA==" target="_blank"><img src="logoigbulet2.png" style="width: 50px; height: 50px;"></a></td>
+                        <td><a href="https://x.com/4uuuull?t=BwzhWXmgrz5kFVybm1SxxA&s=08" target="_blank"><img src="logo X.png" style="width: 69px; height: 55px;"></a></td>
+                        <td><a href="https://github.com/aulyarahmaniar11" target="_blank"><img src="logo github.png" style="width: 45px; height: 45px;"></a></td>
+                    </tr>
+            </table>
+        </center>
+    </body>
+</html> 
