--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Coba html</title>
+        <title>Profil Saya</title>
+        <link rel="icon" href="Favicon logo.jpeg">
         <style> 
             body{background-color: #efb5b5;}
             h3{color: black;}
