--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Profil Saya</title>
-        <link rel="icon" href="Favicon logo.jpeg">
+        <link rel="icon" href="Favicon-logo.png">
         <style> 
             body{background-color: #efb5b5;}
             h3{color: black;}
