--- a/index.html
+++ b/index.html
@@ -6,22 +6,37 @@
         <style> 
             body{background-color: #efb5b5;}
             h3{color: black;}
-            p{color:black; font-size: 120%;}
+            p{color:black; font-size: 120%; text-align: center;margin-bottom: 10px;}
+            table, th,td{border: 1px solid;}
+            td,th{text-align: center;}
+            th{background-color: rgba(242, 79, 73, 0.843);}
+            table{border-collapse: collapse; width: 60%; height: 100px; margin-left: auto; margin-right: auto; margin-bottom: 100px;}
+            img{margin-bottom: 50px; margin-top: 20px;}
         </style>
     </head>
 
     <body> 
         <br>
         <center><img src="pasfoto bulet.png" width="150"></center>
-        <p style="text-align: center;">Aulya Rahmaniar | 102022400178 | Rekayasa Industri | Sistem Informasi</p>
+        <table>
+            <tr>
+                <th>Nama</th>
+                <th>NIM</th>
+                <th>Fakultas</th>
+                <th>Jurusan</th>
+            </tr>
+            <tr>
+                <td>Aulya Rahmaniar</td>
+                <td>102022400178</td>
+                <td>Rekayasa Industri</td>
+                <td>S1 Sistem Informasi</td>
+            </tr>
+        </table>
+        <p>Find me, on Social Media!</p>
         <center>
-            <table>
-                    <tr>
-                        <td><a href="https://www.instagram.com/aulyarahmaniar?igsh=MXNmMDQwNzF6eDg2dA==" target="_blank"><img src="logoigbulet2.png" style="width: 50px; height: 50px;"></a></td>
-                        <td><a href="https://x.com/4uuuull?t=BwzhWXmgrz5kFVybm1SxxA&s=08" target="_blank"><img src="logo X.png" style="width: 69px; height: 55px;"></a></td>
-                        <td><a href="https://github.com/aulyarahmaniar11" target="_blank"><img src="logo github.png" style="width: 45px; height: 45px;"></a></td>
-                    </tr>
-            </table>
+            <a href="https://www.instagram.com/aulyarahmaniar?igsh=MXNmMDQwNzF6eDg2dA==" target="_blank"><img src="logoigbulet2.png" style="width: 50px; height: 50px;"></a>
+            <a href="https://x.com/4uuuull?t=BwzhWXmgrz5kFVybm1SxxA&s=08" target="_blank"><img src="logo X.png" style="width: 69px; height: 55px;"></a>
+            <a href="https://github.com/aulyarahmaniar11" target="_blank"><img src="logo github.png" style="width: 45px; height: 45px;"></a>
         </center>
     </body>
 </html> 
